--- a/tals-ui/react-backtest-ui/src/index.css
+++ b/tals-ui/react-backtest-ui/src/index.css
@@ -19,6 +19,9 @@ body {
   overflow-x: hidden;
   color: #213547;
   width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 * {
